# Geometric-shpe

./: CMakeLists.txt  README.md
include/: circle.h  figure.h  rectangle.h  square.h  triangle.h
src/: CMakeLists.txt  circle.cpp  figure.cpp  main.cpp  rectangle.cpp  square.cpp  triangle.cpp
